add styles for the video

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,6 +60,14 @@
 }
 
 /*************************/
+/* USAGE SECTION */
+/*************************/
+.demo-video {
+    width: 100%;
+    border-radius: 12px;
+}
+
+/*************************/
 /* CTA SECTION */
 /*************************/
 .section-cta {
