edit content for the third feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,8 +59,9 @@
                 <div class="feature-box">
                     <p class="feature-heading">Send Response</p>
                     <p class="feature-text">
-                        You can select the tag's associated box to write the
-                        content that you would like to send out as the email.
+                        You can select the tag's associated box in the "Tags"
+                        page to write the content that you would like to send
+                        out as the response.
                     </p>
                 </div>
                 <div class="feature-img-box">
@@ -75,15 +76,16 @@
                 <div class="feature-img-box">
                     <img
                         src="{{url_for('static', filename='./images/feature-image-3.png')}}"
-                        alt=""
+                        alt="A hand-sketched image of a person writing something"
                         class="feature-img"
                     />
                 </div>
                 <div class="feature-box">
-                    <p class="feature-heading">Receive Feedback</p>
+                    <p class="feature-heading">Edit Response</p>
                     <p class="feature-text">
-                        If the student is not satisfied with the response you
-                        wrote, you can always write a personalized one.
+                        If you think the tag's content was predicted
+                        incorrectly, then you can edit the tag on the spot and
+                        send that as the response.
                     </p>
                 </div>
             </div>
